--- a/exception.html
+++ b/exception.html
@@ -8,7 +8,7 @@
 		<script>
 			console.log('before bar');
 			y = 5;
-			y.bar();
+//			y.bar();
 			console.log('after bar');
 		</script>
 	</body>
