--- a/exception.html
+++ b/exception.html
@@ -7,6 +7,7 @@
 		</script>
 		<p>start</p>
 		<script src="exception.js"></script>
+		<script src="exception2.js"></script>
 		<p>end</p>
 		<script>
 			console.log('after loading exception.js');
